<resources>
    <string name="app_name">Trophy</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="login_button">Log In</string>
    <string name="signup_button">Sign Up</string>
    <string name="trophy_logo">Trophy Logo</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="username_hint">Username</string>
    <string name="name_hint">Name</string>
    <string name="title_activity_lobby">LobbyActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_lobby">Lobby</string>
    <string name="menu_history">History</string>
    <string name="menu_wallet">Wallet</string>
    <string name="menu_logout">Log Out</string>
    <string name="menu_redeem">Redeem</string>
    <string name="menu_buy">Buy</string>
    <string name="bet_name">LOL Tournament</string>
    <string name="game_name">League of Legends</string>
    <string name="amount_bettors">No. Bettors:</string>
    <string name="minimumBet">Bet:</string>

    <string-array name="nameGames">
        <item>League of Legends</item>
        <item>Clash Royale</item>
    </string-array>
</resources>
