<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile_24dp"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_lobby"
            android:icon="@drawable/ic_lobby_24dp"
            android:title="@string/menu_lobby"
            android:checked="true"/>
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_history_24dp"
            android:title="@string/menu_history" />
        <item android:id="@+id/nav_redeem"
            android:icon="@drawable/ic_redeem_24dp"
            android:title="@string/menu_redeem"/>
        <item android:id="@+id/nav_buy"
            android:icon="@drawable/ic_buy_24dp"
            android:title="@string/menu_buy"/>
    </group>

    <item android:id="@+id/nav_logout"
        android:icon="@drawable/ic_logout_24dp"
        android:title="@string/menu_logout"/>



</menu>
